# bermuda-triangle

./: .flaskenv  .gitignore  Pipfile  Procfile  README.md  app.py  make_mines_fake.py  pyproject.toml  scroll_normalizer.py
.github/workflows/: test.yml
bermuda_triangle/: app.py  make_mines_fake.py  scroll_normalizer.py
bermuda_triangle/static/: style.css
bermuda_triangle/templates/: base.html.jinja  fake-mines.html.jinja
bermuda_triangle/test/: test_make_mines_fake.py
static/: style.css
templates/: base.html.jinja  fake-mines.html.jinja  index.html  index.html.jinja  scroll-normalizer.html.jinja
