[tool.poetry]
name = "bermuda-triangle"
version = "0.1.0"
description = ""
authors = ["Ben Kirzhner <ben.kirzhner@gmail.com>"]
readme = "README.md"
packages = [{include = "bermuda_triangle"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
