[tool.poetry]
name = "bermuda-triangle"
version = "0.1.0"
description = ""
authors = ["Ben Kirzhner <ben.kirzhner@gmail.com>"]
readme = "README.md"
packages = [{include = "bermuda_triangle"}]

[tool.poetry.dependencies]
python = "3.11.2"
simfile = "^2.1.1"
gunicorn = "^21.2.0"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
