[tool.poetry]
name = "bermuda-triangle"
version = "0.1.0"
description = ""
authors = ["Ben Kirzhner <ben.kirzhner@gmail.com>", "Ash Garcia <github@garcia.sh>"]
readme = "README.md"
packages = [{include = "bermuda_triangle"}]

[tool.poetry.dependencies]
python = "3.11.5"
simfile = "^2.1.1"
gunicorn = "^23.0.0"
flask = "^3.1.2"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
